k8s/affinity-router.yml
# Copyright 2018 the original author or authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: afrouter
  namespace: voltha
spec:
  clusterIP: None
  ports:
    - name: grpc
      port: 55555
      targetPort: 55555
  selector:
    app: afrouter
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: afrouter
  namespace: voltha
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: afrouter
      annotations:
        cni: "calico"
    spec:
      containers:
      - name: arouter
        image: afrouter
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
        ports:
        - containerPort: 55555
        command: ["/app/afrouter"]
        args: ["-config", "/app/config/arouter.voltha.json"]
      - name: envoy
        image: volthacore/envoy
        volumeMounts:
        - name: config-volume
          mountPath: /envoy/config
        ports:
        - containerPort: 8192
        - containerPort: 50555
      - name: arouterd
        image: afrouterd
        command: ["/app/arouterd"]
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: afrouter-config
