k8s/cli.yml
# Copyright 2017-present Open Networking Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: vcli
  namespace: voltha
  labels:
    name: vcli
spec:
  ports:
    - name: ssh
      port: 5022
      targetPort: 22
  selector:
    app: vcli
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: vcli
  namespace: voltha
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vcli
      annotations:
        cni: "calico"
    spec:
      containers:
        - name: vcli
          image: voltha-cli
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          args:
            - "/voltha/python/cli/setup.sh"
            - "-g afrouter.$(NAMESPACE).svc.cluster.local:55555"
          ports:
            - containerPort: 22
              name: ssh-port
          imagePullPolicy: IfNotPresent
