k8s/rg.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rg
  namespace: voltha
spec:
   replicas: 1
   template:
     metadata:
       labels:
         app: rg
       annotations:
         cni: "pon0"
     spec:
       containers:
         - name: rg
           image: voltha/voltha-tester
           env:
             - name: POD_IP
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIP
             - name: NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
           command: [ "/bin/bash", "-c", "trap : TERM INT; sleep infinity & wait" ]
           imagePullPolicy: IfNotPresent
