k8s/vcli.yml
apiVersion: v1
kind: Service
metadata:
  name: vcli
  namespace: voltha
  labels:
    name: vcli
spec:
  ports:
    - name: ssh
      port: 5022
      targetPort: 22
  selector:
    app: vcli
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: vcli
  namespace: voltha
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: vcli
      annotations:
        cni: "calico"
    spec:
      containers:
        - name: vcli
          image: voltha/voltha-cli
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          args:
            - "/cli/cli/setup.sh"
            - "-C consul:8500"
            - "-g voltha:50555"
            - "-s voltha:18880"
            - "-G"
          ports:
            - containerPort: 22
              name: ssh-port
          imagePullPolicy: IfNotPresent
